# quickcheck-examples

./: README.md  q-checking.cabal  stack.yaml
src/: Functions.hs  Main.hs  Types.hs
