name:                q-checking
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/q-checking#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable q-checking-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types
                     , Functions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , QuickCheck
                     , text
                     , utc
  default-language:    Haskell2010
